After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 687436 - vp8enc: not robust enough for RTP, errors out on packet loss
vp8enc: not robust enough for RTP, errors out on packet loss
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.1.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-11-02 12:53 UTC by Tim-Philipp Müller
Modified: 2012-11-09 15:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
vp8dec: Don't give up so easily if failed to decode a frame (967 bytes, patch)
2012-11-02 22:48 UTC, Debarshi Ray
needs-work Details | Review
vp8dec: Don't give up so easily if failed to decode a frame (1.02 KB, patch)
2012-11-09 15:33 UTC, Debarshi Ray
committed Details | Review

Description Tim-Philipp Müller 2012-11-02 12:53:12 UTC
$ gst-launch-1.0 videotestsrc ! vp8enc ! rtpvp8pay ! identity drop-probability=0.1 ! rtpvp8depay ! vp8dec ! xvimagesink
...
ERROR: from element /GstPipeline:pipeline0/GstVP8Dec:vp8dec0: Failed to decode frame
Additional debug info:
gstvp8dec.c(515): gst_vp8_dec_handle_frame (): /GstPipeline:pipeline0/GstVP8Dec:vp8dec0:
unsupported bitstream
Execution ended after 490871641 ns.

(Smaller values make it error out as well, just takes a few seconds longer).
Comment 1 Debarshi Ray 2012-11-02 22:48:26 UTC
Created attachment 227928 [details] [review]
vp8dec: Don't give up so easily if failed to decode a frame

Tim suggested that we use GST_VIDEO_DECODER_ERROR so that dec->priv->max_errors is taken into account. However the default value (ie. GST_VIDEO_DECODER_MAX_ERRORS) of 10 looks too low to me.
Comment 2 Sebastian Dröge (slomo) 2012-11-09 10:09:24 UTC
Yes, better use GST_VIDEO_DECODER_ERROR here. dec->priv->error_count is decremented again each time something was successfully decoded so 10 should be an acceptable.
Comment 3 Debarshi Ray 2012-11-09 15:33:31 UTC
Created attachment 228583 [details] [review]
vp8dec: Don't give up so easily if failed to decode a frame
Comment 4 Sebastian Dröge (slomo) 2012-11-09 15:44:40 UTC
commit 8a4a6b770fd86fcf1cb17e9015aa384ab191bbb4
Author: Debarshi Ray <rishi@gnu.org>
Date:   Fri Nov 9 16:31:05 2012 +0100

    vp8dec: Don't give up so easily if failed to decode a frame
    
    https://bugzilla.gnome.org/show_bug.cgi?id=687436