vp8dec: Don't give up so easily if failed to decode a frame

https://bugzilla.gnome.org/show_bug.cgi?id=687436